--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,29 @@
-body{
+body {
     font-family: "IBM Plex Mono", monospace;
 }
 
 
-.my-text-color{
+.my-text-color {
     color: rgb(196, 196, 196);
 }
 
-#SuperSecretPWD{
-color: rgb(33,37,41);
-    transition: color .5s;
-    border: .125rem solid rgba(196,196,196);
-
+#SuperSecretPWD {
+    color: rgb(33, 37, 41);
+    /* transition: color .8s; */
+    border: .125rem solid rgba(196, 196, 196);
+    box-shadow: rgb(33, 37, 41);
+    transition: box-shadow 1s, color 1s;
 }
-#SuperSecretPWD:hover{
+
+#SuperSecretPWD:hover {
     color: rgb(196, 196, 196);
+    box-shadow: rgba(196, 196, 196, 0.781) 0 0 8px 8px;
+
+
 
 }
 
-img{
+
+img {
     max-height: 90px;
 }
